--- a/restaurants/La-note-enchantée.html
+++ b/restaurants/La-note-enchantée.html
@@ -49,160 +49,161 @@
         </div>
       </div>
 
- <!--ENTREES-->
- <div class="entrees">
-  <h2 class="title-border-bottom">ENTRÉES</h2>
+      <div class="all-menu"> <!--Cette div pour centrer les menus en version menu desktop-->
+        <!--ENTREES-->
+        <div class="entrees">
+          <h2 class="title-border-bottom">ENTRÉES</h2>
 
-  <article class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Ravioles de foie gras</h3>
-      <p class="small-title-menu">Accompagnés de leur créme à la truffe</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>25€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-  </article>
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Ravioles de foie gras</h3>
+              <p class="small-title-menu">Accompagnés de leur créme à la truffe</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>25€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
 
-  <article class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Caviar osciètre</h3>
-      <p class="small-title-menu">Sur blini à la farine de blé noir</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>35€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-  </article>
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Caviar osciètre</h3>
+              <p class="small-title-menu">Sur blini à la farine de blé noir</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>35€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
 
-  <article class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Homard et espuma de...</h3>
-      <p class="small-title-menu">Mariné aux zests d'orange</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>20€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-  </article>
-
-
-  <article class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Foie gras de canard cuit entier</h3>
-      <p class="small-title-menu">Confiture de figue et pain toasté</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>35€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-
-</div>
-</article>
-
-<!--PLATS-->
-<div class="plats">
-  <h2 class="title-border-bottom">PLATS</h2>
-
-  <article class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Noix de coquilles Saint-Jacques</h3>
-      <p class="small-title-menu">Sur lit de purée de céleri-rave</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>40€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-  </article>
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Homard et espuma de...</h3>
+              <p class="small-title-menu">Mariné aux zests d'orange</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>20€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
 
 
-  <article class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Langoustine poêlée</h3>
-      <p class="small-title-menu">Purée de patate douce</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>35€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-  </article>
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Foie gras de canard cuit entier</h3>
+              <p class="small-title-menu">Confiture de figue et pain toasté</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>35€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+
+        </div>
+        </article>
+
+        <!--PLATS-->
+        <div class="plats">
+          <h2 class="title-border-bottom">PLATS</h2>
+
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Noix de coquilles Saint-Jacques</h3>
+              <p class="small-title-menu">Sur lit de purée de céleri-rave</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>40€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
 
 
-  <artile class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Mijoté de queue de boeuf</h3>
-      <p class="small-title-menu">Et riz sauvage aux zests de citron</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>44€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-    </article>
-</div>
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Langoustine poêlée</h3>
+              <p class="small-title-menu">Purée de patate douce</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>35€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
 
 
-<!--DESSERTS-->
-<div class="desserts">
-  <h2 class="title-border-bottom">DESSERTS</h2>
-
-  <article class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Macaron noisettes et chocolat</h3>
-      <p class="small-title-menu">Glace au caramel brun et sel de guérande</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>18€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-  </article>
-
-  <article class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Baba au rhum revisité </h3>
-      <p class="small-title-menu">Avec son coulis de citron</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>22€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-  </article>
-
-  <article class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Tarte au citron meringuée</h3>
-      <p class="small-title-menu">Destructurée</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>23€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-  </article>
-</div>
-</div>
+          <artile class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Mijoté de queue de boeuf</h3>
+              <p class="small-title-menu">Et riz sauvage aux zests de citron</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>44€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+            </article>
+        </div>
 
 
-  <nav class="explore-restaurant" id="margin-commander">Commander</nav>
-  
+        <!--DESSERTS-->
+        <div class="desserts">
+          <h2 class="title-border-bottom">DESSERTS</h2>
+
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Macaron noisettes et chocolat</h3>
+              <p class="small-title-menu">Glace au caramel brun et sel de guérande</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>18€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
+
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Baba au rhum revisité </h3>
+              <p class="small-title-menu">Avec son coulis de citron</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>22€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
+
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Tarte au citron meringuée</h3>
+              <p class="small-title-menu">Destructurée</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>23€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
+        </div>
+      </div>
+      </div>
+
+      <nav class="explore-restaurant" id="margin-commander">Commander</nav>
+
 
     </section>
   </main>
