--- a/restaurants/La-palette-du-gout.html
+++ b/restaurants/La-palette-du-gout.html
@@ -51,147 +51,148 @@
         </div>
       </div>
 
-      
-      <!--ENTREES-->
-      <div class="entrees">
-        <h2 class="title-border-bottom">ENTRÉES</h2>
+      <div class="all-menu"> <!--Cette div pour centrer les menus en version menu desktop-->
+        <!--ENTREES-->
+        <div class="entrees">
+          <h2 class="title-border-bottom">ENTRÉES</h2>
 
-        <article class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Fricassée d'escargot</h3>
-    <p class="small-title-menu">Au piment d'espelette</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>25€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
-        </article>
-
-        <article class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Foie gras de canard mi-cuit</h3>
-            <p class="small-title-menu">Et ses copeaux de truffe noire</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>35€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
-        </article>
-
-
-        <article class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Oeuf au plat</h3>
-            <p class="small-title-menu">Assaisoné à la truffe sur lit de caviar</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>20€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
-
-      </div>
-      </article>
-
-      <!--PLATS-->
-      <div class="plats">
-        <h2 class="title-border-bottom">PLATS</h2>
-
-        <article class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Filet de boeuf aux herbes</h3>
-            <p class="small-title-menu">Accompagné de sa ribambelle de légumes</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>40€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
-        </article>
-
-
-        <article class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Parmentier de queue de boeuf</h3>
-            <p class="small-title-menu">A la truffe noire sur sa purée de panais</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>35€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
-        </article>
-
-
-        <artile class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Filet de Turbot</h3>
-            <p class="small-title-menu">Aux agrumes</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>44€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Fricassée d'escargot</h3>
+              <p class="small-title-menu">Au piment d'espelette</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>25€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
           </article>
-      </div>
+
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Foie gras de canard mi-cuit</h3>
+              <p class="small-title-menu">Et ses copeaux de truffe noire</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>35€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
 
 
-      <!--DESSERTS-->
-      <div class="desserts">
-        <h2 class="title-border-bottom">DESSERTS</h2>
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Oeuf au plat</h3>
+              <p class="small-title-menu">Assaisoné à la truffe sur lit de caviar</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>20€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
 
-        <article class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Paris-brest</h3>
-            <p class="small-title-menu">Revisité</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>18€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
+        </div>
         </article>
 
-        <article class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Macaron au chocolat d'exception</h3>
-            <p class="small-title-menu">Et glace à la vanille de madagascar</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>22€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
-        </article>
+        <!--PLATS-->
+        <div class="plats">
+          <h2 class="title-border-bottom">PLATS</h2>
 
-        <article class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Mousse au chocolat</h3>
-            <p class="small-title-menu">Au piment d'espelette et à la truffe noire</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>23€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
-        </article>
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Filet de boeuf aux herbes</h3>
+              <p class="small-title-menu">Accompagné de sa ribambelle de légumes</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>40€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
+
+
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Parmentier de queue de boeuf</h3>
+              <p class="small-title-menu">A la truffe noire sur sa purée de panais</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>35€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
+
+
+          <artile class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Filet de Turbot</h3>
+              <p class="small-title-menu">Aux agrumes</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>44€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+            </article>
+        </div>
+
+
+        <!--DESSERTS-->
+        <div class="desserts">
+          <h2 class="title-border-bottom">DESSERTS</h2>
+
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Paris-brest</h3>
+              <p class="small-title-menu">Revisité</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>18€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
+
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Macaron au chocolat d'exception</h3>
+              <p class="small-title-menu">Et glace à la vanille de madagascar</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>22€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
+
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Mousse au chocolat</h3>
+              <p class="small-title-menu">Au piment d'espelette et à la truffe noire</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>23€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
+        </div>
       </div>
       </div>
 
-    <nav class="explore-restaurant" id="margin-commander">Commander</nav>
-  
+      <nav class="explore-restaurant" id="margin-commander">Commander</nav>
+
 
     </section>
   </main>
