--- a/restaurants/A-la-française.html
+++ b/restaurants/A-la-française.html
@@ -51,148 +51,148 @@
         </div>
       </div>
 
-      
 
-<!--ENTREES-->
-<div class="entrees">
-  <h2 class="title-border-bottom">ENTRÉES</h2>
+      <div class="all-menu"> <!--Cette div pour centrer les menus en version menu desktop-->
+        <!--ENTREES-->
+        <div class="entrees">
+          <h2 class="title-border-bottom">ENTRÉES</h2>
 
-  <article class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Tartare de poulpe acidulé</h3>
-      <p class="small-title-menu">Aux zests d'orange</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>25€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-  </article>
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Tartare de poulpe acidulé</h3>
+              <p class="small-title-menu">Aux zests d'orange</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>25€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
 
-  <article class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Velouté de légumes d'antan</h3>
-      <p class="small-title-menu">Carotte, panais, topinambour</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>35€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-  </article>
-
-
-  <article class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Soupe à l'oignon</h3>
-      <p class="small-title-menu">Revisitée</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>20€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-
-</div>
-</article>
-
-<!--PLATS-->
-<div class="plats">
-  <h2 class="title-border-bottom">PLATS</h2>
-
-  <article class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Coquilles Saint-Jacques</h3>
-      <p class="small-title-menu">Accompagnées d'une purée de panais</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>40€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-  </article>
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Velouté de légumes d'antan</h3>
+              <p class="small-title-menu">Carotte, panais, topinambour</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>35€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
 
 
-  <article class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Magret de cannard</h3>
-      <p class="small-title-menu">Et parmentier de pommes de terres</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>35€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-  </article>
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Soupe à l'oignon</h3>
+              <p class="small-title-menu">Revisitée</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>20€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+
+        </div>
+        </article>
+
+        <!--PLATS-->
+        <div class="plats">
+          <h2 class="title-border-bottom">PLATS</h2>
+
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Coquilles Saint-Jacques</h3>
+              <p class="small-title-menu">Accompagnées d'une purée de panais</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>40€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
 
 
-  <artile class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Pigeonneau d'Ille-et-Villaine</h3>
-      <p class="small-title-menu">Sur son lit de gnocchis aux légumes</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>44€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-    </article>
-</div>
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Magret de cannard</h3>
+              <p class="small-title-menu">Et parmentier de pommes de terres</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>35€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
 
 
-<!--DESSERTS-->
-<div class="desserts">
-  <h2 class="title-border-bottom">DESSERTS</h2>
+          <artile class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Pigeonneau d'Ille-et-Villaine</h3>
+              <p class="small-title-menu">Sur son lit de gnocchis aux légumes</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>44€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+            </article>
+        </div>
 
-  <article class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Pétales de violettes glacés</h3>
-      <p class="small-title-menu">Et purée de noisettes</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>18€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-  </article>
 
-  <article class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Fondant au chocolat </h3>
-      <p class="small-title-menu">Revisité</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>22€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-  </article>
+        <!--DESSERTS-->
+        <div class="desserts">
+          <h2 class="title-border-bottom">DESSERTS</h2>
 
-  <article class="choice-menu">
-    <div class="name-menu">
-      <h3 class="title-menu">Millefeuille croustillant</h3>
-      <p class="small-title-menu">Myrtilles et pâte d'amande</p>
-    </div>
-    <div class="tarif">
-      <p class="price"><strong>23€</strong></p>
-    </div>
-    <div class="check">
-      <i class="fa-check fas logo_check"></i>
-    </div>
-  </article>
-</div>
-</div>
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Pétales de violettes glacés</h3>
+              <p class="small-title-menu">Et purée de noisettes</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>18€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
 
-  <nav class="explore-restaurant" id="margin-commander">Commander</nav>
-  
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Fondant au chocolat </h3>
+              <p class="small-title-menu">Revisité</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>22€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
+
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Millefeuille croustillant</h3>
+              <p class="small-title-menu">Myrtilles et pâte d'amande</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>23€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
+        </div>
+      </div>
+      </div>
+      <nav class="explore-restaurant" id="margin-commander">Commander</nav>
+
 
     </section>
   </main>
