--- a/restaurants/Le-délice-des-sens.html
+++ b/restaurants/Le-délice-des-sens.html
@@ -49,144 +49,145 @@
         </div>
       </div>
 
-      <!--ENTREES-->
-      <div class="entrees">
-        <h2 class="title-border-bottom">ENTRÉES</h2>
+      <div class="all-menu"> <!--Cette div pour centrer les menus en version menu desktop-->
+        <!--ENTREES-->
+        <div class="entrees">
+          <h2 class="title-border-bottom">ENTRÉES</h2>
 
-        <article class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Tartare de thon</h3>
-            <p class="small-title-menu">Assaisonné au yuzu</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>25€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
-        </article>
-
-        <article class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Bouchée de homard croustillant</h3>
-            <p class="small-title-menu">Et sa farandole de petits légumes</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>35€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
-        </article>
-
-
-        <article class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Velouté de cèpes</h3>
-            <p class="small-title-menu">Aux truffes</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>20€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
-
-      </div>
-      </article>
-
-      <!--PLATS-->
-      <div class="plats">
-        <h2 class="title-border-bottom">PLATS</h2>
-
-        <article class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Poulet rôti aux herbes de provence</h3>
-            <p class="small-title-menu">Et sa créme de truffe</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>40€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
-        </article>
-
-
-        <article class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Langouste rôtie</h3>
-            <p class="small-title-menu">Et ses légumes de saison</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>35€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
-        </article>
-
-
-        <artile class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Côte de boeuf angus</h3>
-            <p class="small-title-menu">Et sa purée de panais</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>44€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Tartare de thon</h3>
+              <p class="small-title-menu">Assaisonné au yuzu</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>25€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
           </article>
-      </div>
+
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Bouchée de homard croustillant</h3>
+              <p class="small-title-menu">Et sa farandole de petits légumes</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>35€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
 
 
-      <!--DESSERTS-->
-      <div class="desserts">
-        <h2 class="title-border-bottom">DESSERTS</h2>
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Velouté de cèpes</h3>
+              <p class="small-title-menu">Aux truffes</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>20€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
 
-        <article class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Farandole de desserts</h3>
-            <p class="small-title-menu">Du chef</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>18€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
+        </div>
         </article>
 
-        <article class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Crème brulée </h3>
-            <p class="small-title-menu">Revisitée</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>22€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
-        </article>
+        <!--PLATS-->
+        <div class="plats">
+          <h2 class="title-border-bottom">PLATS</h2>
 
-        <article class="choice-menu">
-          <div class="name-menu">
-            <h3 class="title-menu">Tiramisu</h3>
-            <p class="small-title-menu">À la noisette</p>
-          </div>
-          <div class="tarif">
-            <p class="price"><strong>23€</strong></p>
-          </div>
-          <div class="check">
-            <i class="fa-check fas logo_check"></i>
-          </div>
-        </article>
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Poulet rôti aux herbes de provence</h3>
+              <p class="small-title-menu">Et sa créme de truffe</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>40€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
+
+
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Langouste rôtie</h3>
+              <p class="small-title-menu">Et ses légumes de saison</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>35€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
+
+
+          <artile class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Côte de boeuf angus</h3>
+              <p class="small-title-menu">Et sa purée de panais</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>44€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+            </article>
+        </div>
+
+
+        <!--DESSERTS-->
+        <div class="desserts">
+          <h2 class="title-border-bottom">DESSERTS</h2>
+
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Farandole de desserts</h3>
+              <p class="small-title-menu">Du chef</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>18€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
+
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Crème brulée </h3>
+              <p class="small-title-menu">Revisitée</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>22€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
+
+          <article class="choice-menu">
+            <div class="name-menu">
+              <h3 class="title-menu">Tiramisu</h3>
+              <p class="small-title-menu">À la noisette</p>
+            </div>
+            <div class="tarif">
+              <p class="price"><strong>23€</strong></p>
+            </div>
+            <div class="check">
+              <i class="fa-check fas logo_check"></i>
+            </div>
+          </article>
+        </div>
       </div>
       </div>
-
 
       <nav class="explore-restaurant" id="margin-commander">Commander</nav>
     </section>
@@ -208,4 +209,5 @@
   </footer>
   <!--Fin footer-->
 </body>
+
 </html>
