--- a/restaurants/La-note-enchantée.html
+++ b/restaurants/La-note-enchantée.html
@@ -4,18 +4,18 @@
 <html lang="fr">
 
 <head>
-  <meta charset="UTF-8"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>La note enchantée</title>
   <link rel="stylesheet" href=../css/home-mobile.css>
   <!--Bien mettre les 2 petits points aussi non ne fonctionne pas sur gitHub ../ car cette page est située dans un dossier deux niveaux au-dessus de la page « palette-du-gout.html ».-->
-  <link rel="stylesheet" href="../css/home-tablette.css" media="(min-width: 768px) and (max-width: 1240px)"/>
-  <link rel="stylesheet" href="../css/home-desktop.css" media="(min-width: 1240px)"/>
+  <link rel="stylesheet" href="../css/home-tablette.css" media="(min-width: 768px) and (max-width: 1240px)">
+  <link rel="stylesheet" href="../css/home-desktop.css" media="(min-width: 1240px)">
   <link rel="stylesheet" href=../css/menu-mobile.css>
   <!--Bien mettre les 2 petits points aussi non ne fonctionne pas sur gitHub ../ car cette page est située dans un dossier deux niveaux au-dessus de la page « palette-du-gout.html ».-->
-  <link rel="stylesheet" href="../css/menu-tablette.css" media="(min-width: 768px) and (max-width: 1240px)"/>
-  <link rel="stylesheet" href="../css/menu-desktop.css" media="(min-width: 1240px)"/>
+  <link rel="stylesheet" href="../css/menu-tablette.css" media="(min-width: 768px) and (max-width: 1240px)">
+  <link rel="stylesheet" href="../css/menu-desktop.css" media="(min-width: 1240px)">
   <script src="https://kit.fontawesome.com/2a6d7ea1c5.js" crossorigin="anonymous"></script>
 </head>
 
@@ -26,7 +26,7 @@
       <!--Fléche pour retourner sur la page d'accueil index.html-->
       <a href="../index.html"><i class="fas fa-arrow-left"></i></a> <!--Bien mettre ../ avant index-->
       <!--Mettre un seul point . et la / pour que le lien vers index.html fonctionne sur gitHub-->
-      <img id="logo-ohmyfood" src="../images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood"/>
+      <img id="logo-ohmyfood" src="../images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood">
       <!--Mettre les 2 points devant images aussi non logo ne s'affiche sur gitHub"-->
     </div>
   </header>
@@ -34,13 +34,13 @@
 
   <main>
     <img class="img-menus" src="../images/restaurants-images/stil-u2Lp8tXIcjw-unsplash.jpg"
-      alt="photo plat restaurant la palette du gout"/>
+      alt="photo plat restaurant la palette du gout">
     <!--Bien mettre le ../ pour voir l'image-->
 
     <!--Section (1 seule section sur toute la page)-->
     <section class="name-restaurants">
       <div class=" flex-heart">
-        <h1 class="title-bold">La note enchantée</h1> <!--Coeur + titre en display-flex-->
+        <h2 class="title-bold">La note enchantée</h2> <!--Coeur + titre en display-flex-->
         <div class="heart">
           <i class="fas fa-heart"></i>
           <!--full-->
@@ -51,10 +51,10 @@
 
       <div class="all-menu"> <!--Cette div pour centrer les menus en version menu desktop-->
         <!--ENTREES-->
-        <div class="entrees">
+        <article class="entrees">
           <h2 class="title-border-bottom">ENTRÉES</h2>
 
-          <article class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Ravioles de foie gras</h3>
               <p class="small-title-menu">Accompagnés de leur créme à la truffe</p>
@@ -65,9 +65,9 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-          </article>
+          </div>
 
-          <article class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Caviar osciètre</h3>
               <p class="small-title-menu">Sur blini à la farine de blé noir</p>
@@ -78,9 +78,9 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-          </article>
+          </div>
 
-          <article class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Homard et espuma de...</h3>
               <p class="small-title-menu">Mariné aux zests d'orange</p>
@@ -91,10 +91,10 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-          </article>
+          </div>
 
 
-          <article class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Foie gras de canard cuit entier</h3>
               <p class="small-title-menu">Confiture de figue et pain toasté</p>
@@ -105,14 +105,14 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
+          </div>
         </article>
-      </div>
 
         <!--PLATS-->
-        <div class="plats">
+        <article class="plats">
           <h2 class="title-border-bottom">PLATS</h2>
 
-          <article class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Noix de coquilles Saint-Jacques</h3>
               <p class="small-title-menu">Sur lit de purée de céleri-rave</p>
@@ -123,10 +123,10 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-          </article>
+          </div>
 
 
-          <article class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Langoustine poêlée</h3>
               <p class="small-title-menu">Purée de patate douce</p>
@@ -137,10 +137,10 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-          </article>
+          </div>
 
 
-          <artile class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Mijoté de queue de boeuf</h3>
               <p class="small-title-menu">Et riz sauvage aux zests de citron</p>
@@ -151,14 +151,14 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-            </article>
           </div>
+        </article>
 
         <!--DESSERTS-->
-        <div class="desserts">
+        <article class="desserts">
           <h2 class="title-border-bottom">DESSERTS</h2>
 
-          <article class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Macaron noisettes et chocolat</h3>
               <p class="small-title-menu">Glace au caramel brun et sel de guérande</p>
@@ -169,9 +169,9 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-          </article>
+          </div>
 
-          <article class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Baba au rhum revisité </h3>
               <p class="small-title-menu">Avec son coulis de citron</p>
@@ -182,9 +182,9 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-          </article>
+          </div>
 
-          <article class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Tarte au citron meringuée</h3>
               <p class="small-title-menu">Destructurée</p>
@@ -195,8 +195,8 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-          </article>
-        </div>
+          </div>
+        </article>
 
       <nav class="explore-restaurant" id="margin-commander">Commander</nav>
     </div>
