--- a/restaurants/Le-délice-des-sens.html
+++ b/restaurants/Le-délice-des-sens.html
@@ -2,20 +2,19 @@
 
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Le délice des sens</title>
   <link rel="stylesheet" href=../css/home-mobile.css>
   <!--Bien mettre les 2 petits points aussi non ne fonctionne pas sur gitHub ../ car cette page est située dans un dossier deux niveaux au-dessus de la page « palette-du-gout.html ».-->
-  <link rel="stylesheet" href="../css/home-tablette.css" media="(min-width: 768px) and (max-width: 1240px)" />
-  <link rel="stylesheet" href="../css/home-desktop.css" media="(min-width: 1240px)" />
+  <link rel="stylesheet" href="../css/home-tablette.css" media="(min-width: 768px) and (max-width: 1240px)">
+  <link rel="stylesheet" href="../css/home-desktop.css" media="(min-width: 1240px)">
   <link rel="stylesheet" href=../css/menu-mobile.css>
   <!--Bien mettre les 2 petits points aussi non ne fonctionne pas sur gitHub ../ car cette page est située dans un dossier deux niveaux au-dessus de la page « palette-du-gout.html ».-->
-  <link rel="stylesheet" href="../css/menu-tablette.css" media="(min-width: 768px) and (max-width: 1240px)" />
-  <link rel="stylesheet" href="../css/menu-desktop.css" media="(min-width: 1240px)" />
+  <link rel="stylesheet" href="../css/menu-tablette.css" media="(min-width: 768px) and (max-width: 1240px)">
+  <link rel="stylesheet" href="../css/menu-desktop.css" media="(min-width: 1240px)">
   <script src="https://kit.fontawesome.com/2a6d7ea1c5.js" crossorigin="anonymous"></script>
 </head>
 
@@ -26,7 +25,7 @@
       <!--Fléche pour retourner sur la page d'accueil index.html-->
       <a href="../index.html"><i class="fas fa-arrow-left"></i></a> <!--Bien mettre ../ avant index-->
       <!--Mettre un seul point . et la / pour que le lien vers index.html fonctionne sur gitHub-->
-      <img id="logo-ohmyfood" src="../images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood" />
+      <img id="logo-ohmyfood" src="../images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood">
       <!--Mettre les 2 points devant images aussi non logo ne s'affiche sur gitHub"-->
     </div>
   </header>
@@ -34,13 +33,13 @@
 
   <main>
     <img class="img-menus" src="../images/restaurants-images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-      alt="photo plat restaurant la palette du gout" />
+      alt="photo plat restaurant la palette du gout">
     <!--Bien mettre le ../ pour voir l'image-->
 
     <!--Section (1 seule section sur toute la page)-->
     <section class="name-restaurants">
       <div class=" flex-heart">
-        <h1 class="title-bold">Le délice des sens</h1> <!--Coeur + titre en display-flex-->
+        <h2 class="title-bold">Le délice des sens</h2> <!--Coeur + titre en display-flex-->
         <div class="heart">
           <i class="fas fa-heart"></i>
           <!--full-->
@@ -51,10 +50,10 @@
 
       <div class="all-menu"> <!--Cette div pour centrer les menus en version menu desktop-->
         <!--ENTREES-->
-        <div class="entrees">
+        <article class="entrees">
           <h2 class="title-border-bottom">ENTRÉES</h2>
 
-          <article class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Tartare de thon</h3>
               <p class="small-title-menu">Assaisonné au yuzu</p>
@@ -65,9 +64,9 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-          </article>
+          </div>
 
-          <article class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Bouchée de homard croustillant</h3>
               <p class="small-title-menu">Et sa farandole de petits légumes</p>
@@ -78,9 +77,9 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-          </article>
+          </div>
 
-          <article class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Velouté de cèpes</h3>
               <p class="small-title-menu">Aux truffes</p>
@@ -91,14 +90,14 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-          </article>
-        </div>
+          </div>
+        </article>
 
         <!--PLATS-->
-        <div class="plats">
+        <article class="plats">
           <h2 class="title-border-bottom">PLATS</h2>
 
-          <article class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Poulet rôti aux herbes de provence</h3>
               <p class="small-title-menu">Et sa créme de truffe</p>
@@ -109,10 +108,10 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-          </article>
+          </div>
 
 
-          <article class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Langouste rôtie</h3>
               <p class="small-title-menu">Et ses légumes de saison</p>
@@ -123,10 +122,10 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-          </article>
+          </div>
 
 
-          <artile class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Côte de boeuf angus</h3>
               <p class="small-title-menu">Et sa purée de panais</p>
@@ -137,14 +136,14 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-            </article>
-        </div>
+          </div>
+        </article>
 
         <!--DESSERTS-->
-        <div class="desserts">
+        <article class="desserts">
           <h2 class="title-border-bottom">DESSERTS</h2>
 
-          <article class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Farandole de desserts</h3>
               <p class="small-title-menu">Du chef</p>
@@ -155,9 +154,9 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-          </article>
+          </div>
 
-          <article class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Crème brulée </h3>
               <p class="small-title-menu">Revisitée</p>
@@ -168,9 +167,9 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-          </article>
+          </div>
 
-          <article class="choice-menu">
+          <div class="choice-menu">
             <div class="name-menu">
               <h3 class="title-menu">Tiramisu</h3>
               <p class="small-title-menu">À la noisette</p>
@@ -181,8 +180,8 @@
             <div class="check">
               <i class="fa-check fas logo_check"></i>
             </div>
-          </article>
-        </div>
+          </div>
+        </article>
 
         <nav class="explore-restaurant" id="margin-commander">Commander</nav>
       </div>
