--- a/restaurants/La-palette-du-gout.html
+++ b/restaurants/La-palette-du-gout.html
@@ -191,17 +191,15 @@
 
   <!--Footer-->
   <footer>
+    <div class="footer-reverse">
     <h1 class="white-logo">ohmyfood</h1>
     <ul class="flex-info">
-      <li>
-        <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
-      </li>
-      <li>
-        <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
-      </li>
-      <li><a href="#">Mentions légales</a></li>
+      <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+      <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+      <li class="margin-mention"><a href="#">Mentions légales</a></li>
       <li><a href="mailto:service-client@gmail.com">Contact</a></li>
     </ul>
+    </div>
   </footer>
   <!--Fin footer-->
 </body>
