--- a/restaurants/A-la-française.html
+++ b/restaurants/A-la-française.html
@@ -8,11 +8,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>A la française</title>
-  <link rel="stylesheet" href=../css/home-mobile.css>
+  <link rel="stylesheet" href="../css/home-mobile.css">
   <!--Bien mettre les 2 petits points aussi non ne fonctionne pas sur gitHub ../ car cette page est située dans un dossier deux niveaux au-dessus de la page « palette-du-gout.html ».-->
   <link rel="stylesheet" href="../css/home-tablette.css" media="(min-width: 768px) and (max-width: 1240px)">
   <link rel="stylesheet" href="../css/home-desktop.css" media="(min-width: 1240px)">
-  <link rel="stylesheet" href=../css/menu-mobile.css>
+  <link rel="stylesheet" href="../css/menu-mobile.css">
   <!--Bien mettre les 2 petits points aussi non ne fonctionne pas sur gitHub ../ car cette page est située dans un dossier deux niveaux au-dessus de la page « palette-du-gout.html ».-->
   <link rel="stylesheet" href="../css/menu-tablette.css" media="(min-width: 768px) and (max-width: 1240px)">
   <link rel="stylesheet" href="../css/menu-desktop.css" media="(min-width: 1240px)">
@@ -191,13 +191,13 @@
   <!--Footer-->
   <footer>
     <div class="footer-reverse">
-    <h1 class="white-logo">ohmyfood</h1>
-    <ul class="flex-info">
-      <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-      <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-      <li class="margin-mention"><a href="#">Mentions légales</a></li>
-      <li><a href="mailto:service-client@gmail.com">Contact</a></li>
-    </ul>
+      <h1 class="white-logo">ohmyfood</h1>
+      <ul class="flex-info">
+        <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+        <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+        <li class="margin-mention"><a href="#">Mentions légales</a></li>
+        <li><a href="mailto:service-client@gmail.com">Contact</a></li>
+      </ul>
     </div>
   </footer>
   <!--Fin footer-->
