--- a/restaurants/La-palette-du-gout.html
+++ b/restaurants/La-palette-du-gout.html
@@ -21,7 +21,23 @@
 <body>
   <!--Header fléche + image du restaurant-->
   <header>
-    <div class="arrow-and-img">
+    <div class="arrow-and-img"><!DOCTYPE html>
+      <html lang="fr">
+      <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>La note enchantée</title>
+        <link rel="stylesheet" href="../css/home-mobile.css">
+        <!--Bien mettre les 2 petits points aussi non ne fonctionne pas sur gitHub ../ car cette page est située dans un dossier deux niveaux au-dessus de la page « palette-du-gout.html ».-->
+        <link rel="stylesheet" href="../css/home-tablette.css" media="(min-width: 768px) and (max-width: 1240px)">
+        <link rel="stylesheet" href="../css/home-desktop.css" media="(min-width: 1240px)">
+        <link rel="stylesheet" href="../css/menu-mobile.css">
+        <!--Bien mettre les 2 petits points aussi non ne fonctionne pas sur gitHub ../ car cette page est située dans un dossier deux niveaux au-dessus de la page « palette-du-gout.html ».-->
+        <link rel="stylesheet" href="../css/menu-tablette.css" media="(min-width: 768px) and (max-width: 1240px)">
+        <link rel="stylesheet" href="../css/menu-desktop.css" media="(min-width: 1240px)">
+        <script src="https://kit.fontawesome.com/2a6d7ea1c5.js" crossorigin="anonymous"></script>
+      </head>
       <!--Fléche pour retourner sur la page d'accueil index.html-->
       <a href="../index.html"><i class="fas fa-arrow-left"></i></a> <!--Bien mettre ../ avant index-->
       <!--Mettre un seul point . et la / pour que le lien vers index.html fonctionne sur gitHub-->
