--- a/restaurants/La-note-enchantée.html
+++ b/restaurants/La-note-enchantée.html
@@ -38,15 +38,18 @@
 
     <!--Section (1 seule section sur toute la page)-->
     <section class="name-restaurants">
+      <article class="title-and-heart">
+      <h2 class="title-bold">La note enchantée</h2> <!--Coeur + titre en display-flex-->
       <div class=" flex-heart">
-        <h2 class="title-bold">La note enchantée</h2> <!--Coeur + titre en display-flex-->
-        <div class="heart">
+       
+        <div class="heart" id="heart-menu">
           <i class="fas fa-heart"></i>
           <!--full-->
           <i class="far fa-heart"></i>
           <!--empty-->
         </div>
       </div>
+    </article>
 
       <div class="all-menu"> <!--Cette div pour centrer les menus en version menu desktop-->
         <!--ENTREES-->
