--- a/restaurants/La-palette-du-gout.html
+++ b/restaurants/La-palette-du-gout.html
@@ -40,7 +40,7 @@
 
     <!--Section (1 seule section sur toute la page)-->
     <section class="name-restaurants">
-      <article class="title-and-heart">
+      <div class="title-and-heart">
       <h2 class="title-bold">La palette du goût</h2> <!--Coeur + titre en display-flex-->
       <div class=" flex-heart">
        
@@ -51,8 +51,8 @@
           <!--empty-->
         </div>
       </div>
-    </article>
-    
+    </div>
+
       <div class="all-menu"> <!--Cette div pour centrer les menus en version menu desktop-->
         <!--ENTREES-->
         <article class="entrees">
