--- a/restaurants/La-note-enchantée.html
+++ b/restaurants/La-note-enchantée.html
@@ -84,7 +84,7 @@
 
           <div class="choice-menu">
             <div class="name-menu">
-              <h3 class="title-menu">Homard et espuma de...</h3>
+              <h3 class="title-menu">Homard et espuma de potiron</h3>
               <p class="small-title-menu">Mariné aux zests d'orange</p>
             </div>
             <div class="tarif">
