--- a/restaurants/A-la-française.html
+++ b/restaurants/A-la-française.html
@@ -25,8 +25,7 @@
     <div class="arrow-and-img">
       <!--Fléche pour retourner sur la page d'accueil index.html-->
       <a href="../index.html"><i class="fas fa-arrow-left"></i></a> <!--Bien mettre ../ avant index-->
-      <!--Mettre un seul point . et la / pour que le lien vers index.html fonctionne sur gitHub-->
-      <img id="logo-ohmyfood" src="../images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood">
+     <img id="logo-ohmyfood" src="../images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood">
       <!--Mettre les 2 points devant images aussi non logo ne s'affiche sur gitHub"-->
     </div>
   </header>
@@ -41,7 +40,7 @@
     <section class="name-restaurants">
       <article class="title-and-heart">
       <h2 class="title-bold">A la française</h2> <!--Coeur + titre en display-flex-->
-      <div class=" flex-heart">
+      <div class="flex-heart" id="different-heart-margin">
        
         <div class="heart" id="heart-menu">
           <i class="fas fa-heart"></i>
