--- a/restaurants/A-la-française.html
+++ b/restaurants/A-la-française.html
@@ -38,7 +38,7 @@
 
     <!--Section (1 seule section sur toute la page)-->
     <section class="name-restaurants">
-      <article class="title-and-heart">
+      <div class="title-and-heart">
       <h2 class="title-bold">A la française</h2> <!--Coeur + titre en display-flex-->
       <div class="flex-heart" id="different-heart-margin">
        
@@ -49,7 +49,7 @@
           <!--empty-->
         </div>
       </div>
-    </article>
+    </div>
 
 
       <div class="all-menu"> <!--Cette div pour centrer les menus en version menu desktop-->
