--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
               </div>
 
               <div class="heart">
-                <i class="fas fa-heart"></i> <!--Coeur-->
+                <i class="fas fa-heart"></i> <!--Coeur plein-->
                 <!--full-->
                 <i class="far fa-heart"></i>
-                <!--empty-->
+                <!--empty, vide-->
               </div>
             </article>
           </a>
